--- a/css/style.css
+++ b/css/style.css
@@ -35,17 +35,17 @@ html {
 	align-items: center;
 	justify-content: space-between;
 }
-.nav-bar .brand a {
+.logo a {
 	font-family: 'Flash Back - Demo', sans-serif;
 	font-size: 3rem;
 	color: white;
 }
-.nav-bar .nav-list {
+.nav-list {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
-.nav-bar .nav-list .hamburger {
+.hamburger {
 	border: 2px solid white;
 	border-radius: 50%;
 	display: flex;
@@ -56,29 +56,29 @@ html {
 	transition: .3s ease transform;
 	cursor: pointer;
 }
-.nav-bar .nav-list .hamburger.active {
+.hamburger.active {
 	transform: rotate(360deg);
 }
-.nav-bar .nav-list .hamburger.active .bar:before {
+.hamburger.active .bar:before {
 	top: 0;
 	transform: rotate(45deg);
 }
-.nav-bar .nav-list .hamburger.active .bar:after {
+.hamburger.active .bar:after {
 	top: 0;
 	transform: rotate(-45deg);
 }
-.nav-bar .nav-list .hamburger.active .bar {
+.hamburger.active .bar {
 	background-color: transparent;
 }
-.nav-bar .nav-list .hamburger .bar {
+.bar {
 	height: 2px;
 	width: 30px;
 	background-color: white;
 	position: relative;
 	display: flex;
 }
-.nav-bar .nav-list .hamburger .bar::before,
-.nav-bar .nav-list .hamburger .bar::after {
+.bar::before,
+.bar::after {
 	content: '';
 	position: absolute;
 	left: 0;
@@ -87,13 +87,13 @@ html {
 	background-color: white;
 	transition: .3s ease all;
 }
-.nav-bar .nav-list .hamburger .bar::before {
+.bar::before {
 	top: 8px;
 }
-.nav-bar .nav-list .hamburger .bar::after {
+.bar::after {
 	bottom: 8px;
 }
-.nav-bar .nav-list ul {
+.nav-list ul {
 	position: absolute;
 	width: 100%;
 	top: 0;
@@ -105,15 +105,15 @@ html {
 	text-align: center;
 	z-index: -1;
 }
-.nav-bar .nav-list ul li {
+.nav-list ul li {
 	list-style: none;
 	display: block;
 	position: relative;
 }
-.nav-bar .nav-list ul li:hover:after {
+.nav-list ul li:hover:after {
 	transform: translateX(-50%) scale(1);
 }
-.nav-bar .nav-list ul li:after {
+.nav-list ul li:after {
 	content: '';
 	position: absolute;
 	width: 5rem;
@@ -124,7 +124,7 @@ html {
 	bottom: 0;
 	transition: .3s ease transform;
 }
-.nav-bar .nav-list ul li a {
+.nav-list ul li a {
 	font-size: 1.8rem;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -133,7 +133,7 @@ html {
 	letter-spacing: .15rem;
 	padding: 2rem 3rem;
 }
-.nav-bar .nav-list.open ul {
+.nav-list.open ul {
 	transform: translateY(90px);
 }
 /* End Nav Bar */
@@ -150,22 +150,22 @@ html {
 	justify-content: center;
 	align-items: center;
 }
-.hero .hero-info {
+.hero-info {
 	width: 100%;
 	text-align: center;
 }
-.hero .hero-info .hero-info-heading {
+.hero-info h1 {
 	font-size: 5rem;
 	font-weight: 500;
 	color: whitesmoke;
 }
-.hero .hero-info .hero-info-subheading {
+.hero-info p {
 	font-size: 1.6rem;
 	text-transform: uppercase;
 	letter-spacing: .5rem;
 	color: whitesmoke;
 }
-.hero .hero-info .hero-info-button {
+.hero-info-button {
 	margin-top: 30px;
 	padding: 2rem 5rem;
 	display: inline-block;
@@ -176,19 +176,19 @@ html {
 	letter-spacing: .6rem;
 	background-color: rgba(85, 85, 85, 0.534);
 }
-.hero .hero-img {
+.hero-img {
 	height: auto;
 	width: 80%;
 	margin-bottom: 3rem;
 }
-.hero .hero-img img {
+.hero-img img {
 	height: 100%;
 	width: 100%;
 }
 /* End Hero Section */
 
 /* About Section  */
-.about {
+/* .about {
 	width: 100%;
 	min-height: 50vh;
 	padding: 10rem 5rem;
@@ -245,31 +245,31 @@ html {
 	height: 120%;
 	background-color: rgba(34, 33, 33, 0.158);
 	z-index: -1;
-}
+} */
 /* End About Section  */
 
-/* Services section  */
-.services {
+/* Projects section  */
+.Projects {
 	flex-direction: column;
 	min-height: 60vh;
 	padding: 10rem 5rem;
 }
-.services .services-header {
+.Projects-header {
 	width: 100%;
 	text-align: center;
 }
-.services .services-header .services-header-heading {
+ .Projects-header h1 {
 	font-size: 4rem;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	color: black;
 }
-.services .services-header .services-header-desc {
+.Projects-header p {
 	font-size: 1.3rem;
 	line-height: 2rem;
 	margin-top: 20px;
 }
-.services .services-info {
+.Projects-info {
 	margin-top: 30px;
 	display: flex;
 	align-items: center;
@@ -277,14 +277,14 @@ html {
 	width: 100%;
 	flex-direction: column;
 }
-.services .services-info .service {
+.Project {
 	width: 100%;
 	min-height: 300px;
 	position: relative;
 	transition: .3s ease transform;
 	margin: 5px;
 }
-.services .services-info .service .service-card {
+.Project-card {
 	position: absolute;
 	height: 100%;
 	width: 100%;
@@ -292,8 +292,8 @@ html {
 	transition: .3s ease transform;
 	display: block;
 }
-.services .services-info .service .service-card .service-front,
-.services .services-info .service .service-card .service-back {
+.Project-front,
+.Project-back {
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -307,34 +307,34 @@ html {
 	background-color: rgba(0, 0, 0, 0.13);
 	padding: 10px;
 }
-.services .services-info .service .service-card .service-back {
+.Project-back {
 	transform: rotateY(180deg);
 }
-.services .services-info .service .service-card .service-front i {
+.Project-front i {
 	font-size: 4rem;
 	color: black;
 	margin-bottom: 10px;
 }
-.services .services-info .service .service-card .service-front .service-front-heading,
-.services .services-info .service .service-card .service-back .service-back-heading {
+.Project-front h1,
+.Project-back p {
 	font-size: 2.5rem;
 	text-transform: capitalize;
 }
-.services .services-info .service:hover .service-card {
+.Project:hover .Project-card {
 	transform: rotateY(180deg);
 }
-.services .services-info .service .service-card .service-back .service-back-desc {
+.Project-back p {
 	font-size: 1.3rem;
 	margin-top: 10px;
 	text-align: center;
 }
-.services .services-info .service:nth-child(2) .service-card .service-front {
-	background-image: url(./images/img-2.jpg);
+ .Project-front {
+	background-image: url(/img/img-5.jpg);
 	background-size: cover;
 	position: relative;
 	color: white;
 }
-.services .services-info .service:nth-child(2) .service-card .service-front::after {
+.Project-front::after {
 	content: '';
 	position: absolute;
 	left: 0;
@@ -344,10 +344,10 @@ html {
 	background-color: rgba(0, 0, 0, 0.274);
 	z-index: -1;
 }
-.services .services-info .service:nth-child(2) .service-card .service-front i {
+/* .Project:nth-child(2) .Project-card .Project-front i {
 	color: white;
-}
-/* End Services section  */
+} */
+/* End Projects section  */
 
 /* Hire Section  */
 .hire {
@@ -389,21 +389,21 @@ html {
 	text-align: center;
 	padding: 5rem;
 }
-.footer .footer-contact {
+.footer-contact {
 	padding: 20px;
 }
-.footer .footer-contact .footer-contact-heading {
+.footer-contact h1 {
 	font-size: 2.5rem;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	margin-bottom: 10px;
 }
-.footer .footer-contact .footer-contact-info {
+.footer-contact p {
 	font-size: 1.4rem;
 	padding-top: 10px;
 	letter-spacing: .2rem;
 }
-.footer .footer-social-follow .footer-social-icon a {
+.footer-social-icon a {
 	color: white;
 	font-size: 3rem;
 	margin: .4rem;
@@ -413,20 +413,20 @@ html {
 
 /* Media query for desktop and tab  */
 @media only screen and (min-width: 768px) {
-	.nav-bar .nav-list .hamburger {
+	.hamburger {
 		display: none;
 	}
 	.nav-bar {
 		width: 80%;
 	}
-	.nav-bar .nav-list ul {
+	.nav-list ul {
 		transform: translateX(0);
 		position: initial;
 		padding: 0;
 		z-index: initial;
 		background-color: transparent;
 	}
-	.nav-bar .nav-list ul li {
+	.nav-list ul li {
 		display: inline-block;
 	}
 	.hero {
@@ -436,19 +436,19 @@ html {
 		justify-content: center;
 		align-items: center;
 	}
-	.hero .hero-info {
+	.hero-info {
 		max-width: 30%;
 		text-align: left;
 	}
-	.hero .hero-info .hero-info-subheading {
-		font-size: 1.3rem;
+	.hero-info p {
+		font-size: 14px;
 		letter-spacing: .5rem;
 	}
-	.hero .hero-img {
+	.hero-img {
 		min-width: 400px;
 		max-width: 1000px;
 	}
-	.about {
+	/* .about {
 		width: 80%;
 		margin: 0 auto;
 		flex-direction: row;
@@ -457,17 +457,17 @@ html {
 		width: 50%;
 		text-align: left;
 		padding-right: 17rem;
-	}
-	.services .services-header .services-header-desc {
+	} */
+	.Projects-header p {
 		max-width: 500px;
 		padding-top: 20px;
 		margin: 0 auto;
 	}
-	.services .services-info {
+	.Projects-info {
 		flex-direction: row;
 		width: 80%;
 	}
-	.services .services-info .service {
+	.Project {
 		margin: 0;
 	}
 }
@@ -475,11 +475,11 @@ html {
 
 /* Media Query For Desktop Only  */
 @media only screen and (min-width: 1200px) {
-	.hero .hero-info .hero-info-heading {
+.hero-info h1 {
 		font-size: 6rem;
 	}
-	.hero .hero-info .hero-info-subheading {
-		letter-spacing: .8rem;
+	.hero-info p {
+		letter-spacing: 1px;
 	}
 }
 /* End Media Query For Desktop Only  */
