--- a/css/style.css
+++ b/css/style.css
@@ -285,9 +285,7 @@ html {
 	background-color: rgba(0, 0, 0, 0.274);
 	z-index: -1;
 }
-/* .Project:nth-child(2) .Project-card .Project-front i {
-	color: white;
-} */
+
 /* End Projects section  */
 
 /* Skills section */
@@ -297,6 +295,13 @@ html {
 	padding: 80px 0;
 	background-color: rgb(0, 0, 0);
 }
+.skills-korobka{
+	max-width: 1140px;
+	width: 85%;
+	margin-bottom: 25px;
+   margin: auto;
+	padding: 0px 25px;
+}
 .skills h1{
 	font-size: 40px;
 	text-transform: uppercase;
@@ -305,16 +310,15 @@ html {
 }
 .skills h3{
 	margin-bottom: 25px;
-   margin: 20px 0px 0px;
+   margin: 20px auto 0px;
    font-size: 20px;
-	text-align: left;
-   padding: 0 0px 0px 477px;
 	color: rgb(255, 255, 255);
+	text-align: -webkit-left;
 }
 .skills-container{
-	width: 50%;
+	/* width: 50%; */
 	background-color: #d2d7d3;
-	margin-left: 25%;
+	/* margin-left: 25%; */
 	border-radius: 5px;
 }
 .skill{
